<resources>
    <string name="app_name">Event App</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="attendees">Attendees</string>
    <string name="speakers">Speakers</string>
    <string name="feed">Feed</string>
    <string name="post_feed">Post To Feed</string>
    <string name="user_profile">Profile</string>
    <string name="event_venue">Venue</string>
    <string name="logout">Logout</string>

    // Profile
    <string name="action_settings">Settings</string>
    <string name="USERNAME">Username</string>
    <string name="email">Email...</string>
    <string name="PASSWORD">Password</string>
    <string name="password">Password...</string>
    <string name="SIGN_IN">Sign In</string>
    <string name="NewUser">New User? Register here...</string>
    <string name="welcome">Welcome</string>
    <string name="Signup">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="emails">Email</string>
    <string name="pass">Password</string>
    <string name="title_event">Events</string>
    <string name="ANNOUNCEMENTS">ANNOUNCEMENTS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
