<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/photo"
    android:clipToPadding="true"
    android:fillViewport="true"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:scrollbarStyle="outsideOverlay"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="390dp"
            android:adjustViewBounds="false"
            android:background="#00FFFFFF"
            android:cropToPadding="false"
            android:textSize="50sp"
            android:textColor="#ffffff"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/welcome"/>

        <EditText
            android:id="@+id/emaillogin"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="70dp"
            android:autofillHints="@string/USERNAME"
            android:background="@layout/rounded_corner"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="#212121"
            android:textColorHint="#636363"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView3"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/passwordlogin"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="70dp"
            android:autofillHints="@string/PASSWORD"
            android:background="@layout/rounded_corner"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="#212121"
            android:textColorHint="#636363"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emaillogin"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="8dp"
            android:background="@layout/button_corner"
            android:onClick="SignIn"
            android:text="@string/SIGN_IN"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordlogin"
            tools:ignore="UnusedAttribute"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@layout/register_link"
            android:gravity="center_horizontal"
            android:onClick="openRegisterActivity"
            android:text="@string/NewUser"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>








